parser/src/snapshots/emerald_lang_parser__parser__tests__parse_lambda.snap
---
source: src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 18,
                    },
                ),
                custom: (),
                node: Lambda {
                    args: Arguments {
                        posonlyargs: [],
                        args: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 7,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 8,
                                    },
                                ),
                                custom: (),
                                node: ArgData {
                                    arg: "x",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 10,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 11,
                                    },
                                ),
                                custom: (),
                                node: ArgData {
                                    arg: "y",
                                    annotation: None,
                                    type_comment: None,
                                },
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kw_defaults: [],
                        kwarg: None,
                        defaults: [],
                    },
                    body: Located {
                        location: Location {
                            row: 1,
                            column: 15,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 18,
                            },
                        ),
                        custom: (),
                        node: BinOp {
                            left: Located {
                                location: Location {
                                    row: 1,
                                    column: 13,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 14,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "x",
                                    ctx: Load,
                                },
                            },
                            op: Mult,
                            right: Located {
                                location: Location {
                                    row: 1,
                                    column: 17,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 18,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Load,
                                },
                            },
                        },
                    },
                },
            },
        },
    },
]
