parser/src/snapshots/emerald_lang_parser__parser__tests__parse_named_expression_generator_comprehension.snap
---
source: src/parser.rs
expression: parse_ast
---
Located {
    location: Location {
        row: 1,
        column: 0,
    },
    end_location: Some(
        Location {
            row: 1,
            column: 23,
        },
    ),
    custom: (),
    node: GeneratorExp {
        elt: Located {
            location: Location {
                row: 1,
                column: 1,
            },
            end_location: Some(
                Location {
                    row: 1,
                    column: 11,
                },
            ),
            custom: (),
            node: NamedExpr {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 1,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 11,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Store,
                    },
                },
                value: Located {
                    location: Location {
                        row: 1,
                        column: 6,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 11,
                        },
                    ),
                    custom: (),
                    node: BinOp {
                        left: Located {
                            location: Location {
                                row: 1,
                                column: 6,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 7,
                                },
                            ),
                            custom: (),
                            node: Name {
                                id: "y",
                                ctx: Load,
                            },
                        },
                        op: Add,
                        right: Located {
                            location: Location {
                                row: 1,
                                column: 10,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 11,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            },
        },
        generators: [
            Comprehension {
                target: Located {
                    location: Location {
                        row: 1,
                        column: 16,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 17,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "y",
                        ctx: Store,
                    },
                },
                iter: Located {
                    location: Location {
                        row: 1,
                        column: 21,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 22,
                        },
                    ),
                    custom: (),
                    node: Name {
                        id: "z",
                        ctx: Load,
                    },
                },
                ifs: [],
                is_async: 0,
            },
        ],
    },
}
