parser/src/snapshots/emerald_lang_parser__parser__tests__parse_print_2.snap
---
source: src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 23,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 23,
                    },
                ),
                custom: (),
                node: Call {
                    func: Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 5,
                            },
                        ),
                        custom: (),
                        node: Name {
                            id: "print",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 6,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 19,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 21,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 22,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [],
                },
            },
        },
    },
]
