parser/src/snapshots/emerald_lang_parser__parser__tests__parse_string.snap
---
source: src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 13,
            },
        ),
        custom: (),
        node: Expr {
            value: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 13,
                    },
                ),
                custom: (),
                node: Constant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            },
        },
    },
]
