parser/src/snapshots/emerald_lang_parser__parser__tests__parse_tuples.snap
---
source: src/parser.rs
expression: "parse_program(source, \"<test>\").unwrap()"
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 11,
            },
        ),
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 4,
                        },
                    ),
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 0,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 1,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "a",
                                    ctx: Store,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 3,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 4,
                                    },
                                ),
                                custom: (),
                                node: Name {
                                    id: "b",
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 7,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 11,
                    },
                ),
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 7,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 8,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    4,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 10,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 11,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    5,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
